--- a/app/src/main/res/layout/row_item_detail_adapter.xml
+++ b/app/src/main/res/layout/row_item_detail_adapter.xml
@@ -1,6 +1,8 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:background="@color/white"
+    android:layout_marginTop="1dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
