--- a/app/src/main/res/layout/row_product_adapter.xml
+++ b/app/src/main/res/layout/row_product_adapter.xml
@@ -25,6 +25,20 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/text_view_product_mrp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_view_product_name"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="18dp"
+        android:layout_toRightOf="@+id/text_view_product_price"
+        android:text="20"
+        android:textStyle="bold"
+        android:textColor="@color/red"
+        android:textSize="20dp" />
+
+
+    <TextView
         android:id="@+id/text_view_product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
